# snakegame-sensehat

./: CMakeLists.txt  README.md  build.sh
include/: project.h
src/: apple.c  display.c  input.c  main.c  snake.c
